--- a/mobx-issuelist/package.json
+++ b/mobx-issuelist/package.json
@@ -13,6 +13,7 @@
     "react-mobx": "0.0.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
